--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,3 +1,27 @@
+
+navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  font-size: 30px;
+  font-family: 'Roboto Slab', serif;
+  background-color: gray;
+  margin: 0px;
+  color: white;
+}
+
+navigation a {
+  color: white;
+}
+
+li {
+  list-style-type: none;
+}
+
 .profile-dropdown {
   position: absolute;
+}
+
+.logoutModal {
+  background-color: white;
 }
