--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -18,7 +18,7 @@
     background-size: cover; */
     padding: 10px;
     border-radius: 8px;
-    width: 200px;
+    width: 300px;
     height: 200px;
-    margin: 20px;
+    margin: 20px 5px 20px 0;
 }
