--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,17 +21,7 @@ body {
 
 a {
     text-decoration: none;
-    color: #540804;
-}
-
-h1 {
-    font-family: 'Cinzel Decorative', serif;
-    font-weight: 900;
-    font-size: 60px;
-}
-
-h1 a {
-    color: #b5b5b5;
+    color: #a23a35;
 }
 
 input {
@@ -39,9 +29,34 @@ input {
     padding: 5px;
 }
 
+h1 {
+    font-size: 40px;
+    padding: 0;
+    margin: 0;
+}
+
+button {
+    border: 0;
+    background-color:  #a23a35;
+    color: #b5b5b5;
+    border-radius: 6px;
+    font-size: 20px;
+}
+
+button:hover {
+    background-color:  #a04a45;
+}
+
 .header {
-    margin: 0 auto;
-    text-align: center;
+    font-family: 'Cinzel Decorative', serif;
+    font-weight: 900;
+    align-items: flex-end;
+    vertical-align: bottom;
+    line-height: 10px;
+}
+
+.header a {
+    color: #b5b5b5;
 }
 
 .container {
@@ -54,14 +69,31 @@ input {
 }
 
 .signup-login {
-    width: 150px;
     display: flex;
+    width: 120px;
     flex-direction: row;
+    text-align: right;
     justify-content: space-between;
-    padding: 20px 0 0 20px;
+    padding-top: 20px;
     color: #b5b5b5;
+    position: absolute;
+    right: 20px;
+    top: 0;
+}
+
+.logout {
+    padding-top: 20px;
+    position: absolute;
+    right: 20px;
+    color: #b5b5b5;
+    top: 0;
 }
 
 .signup-login a {
     color: #b5b5b5;
+}
+
+.fa-dice-d20 {
+    color: #b5b5b5;
+    padding-right: 20px;
 }
