--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -75,6 +75,7 @@ button:hover {
     text-align: right;
     justify-content: space-between;
     padding-top: 20px;
+    margin-bottom: 20px;
     color: #b5b5b5;
     position: absolute;
     right: 20px;
